# 4Wins_gui

./: .gitignore  CMakeLists.txt  README.md  news.html
src/: ClientNetworkController.cpp  ClientNetworkController.h  GraphicalGUIMyProfile.h  GraphicalGUIViewProfiles.cpp  GraphicalUIGame.h  ServerNetworkController.cpp  ServerNetworkController.h  TCPMessageUser.cpp  TCPMessageUser.h
src/application/: main.cpp
src/controller/: AGameManager.cpp  AGameManager.h  GameControllerStandard.cpp  GameControllerStrategy.cpp  GameControllerStrategy.h  GameFactory.cpp  GameFactory.h  IGameController.h  IGameManager.h  IGameManagerClient.h  IGameManagerLocal.h  IGameManagerServer.h  LoginManager.cpp
src/controller/gameController/: GameControllerStandard.cpp  GameControllerStandard.h  GameControllerStrategy.cpp  GameControllerStrategy.h
src/controller/gameManager/: GameManagerLocal.cpp  GameManagerLocal.h  GameManagerNetwork.cpp  GameManagerNetwork.h  GameManagerNetworkClient.cpp  GameManagerNetworkClient.h  GameManagerNetworkServer.cpp  GameManagerNetworkServer.h
src/controller/network/: ClientNetworkController.cpp  ClientNetworkController.h  LoginManager.h  NetworkControllerClient.cpp  NetworkControllerServer.cpp  NetworkControllerServer.h  ServerNetworkController.cpp  ServerNetworkController.h  TCPConnection.cpp  TCPConnection.h
src/controller/network/messages/: TCPMessage.cpp  TCPMessage.h  TCPMessageGame.h  TCPMessageInput.cpp  TCPMessageInput.h
src/controller/networkController/: NetworkControllerClient.cpp  NetworkControllerClient.h  NetworkControllerServer.cpp  NetworkControllerServer.h  TCPConnection.cpp  TCPConnection.h
src/controller/networkController/messages/: TCPMessage.cpp  TCPMessage.h  TCPMessageGame.cpp  TCPMessageGame.h  TCPMessageUser.cpp  TCPMessageUser.h
src/controller/pattern/: Observer.cpp  Observer.h  Subject.cpp  Subject.h
src/data/: ICell.h  IField.h  IGame.h  IPlayer.h
src/data/impl/: Cell.cpp  Cell.h  Field.cpp  Field.h  Game.cpp  Game.h  Player.cpp  Player.h
src/view/: GraphicalUI.cpp  GraphicalUI.h  IUserInterface.h  TextUI.cpp  TextUI.h
src/view/implGUI/: GraphicalGUIMyProfile.cpp  GraphicalGUIPlayGame.cpp  GraphicalGUIPlayGame.h  GraphicalGUIViewProfiles.h  GraphicalUIField.cpp  GraphicalUIField.h  GraphicalUIGame.cpp  GraphicalUIGame.h  GraphicalUILocalMain.cpp  GraphicalUILocalMain.h  GraphicalUIMyProfile.cpp  GraphicalUIMyProfile.h  GraphicalUIPlayGame.cpp  GraphicalUIPlayGame.h  GraphicalUIServer.cpp  GraphicalUIServer.h  GraphicalUITab.cpp  GraphicalUITab.h  GraphicalUITable.cpp  GraphicalUITable.h  GraphicalUIViewProfiles.cpp  GraphicalUIViewProfiles.h  GraphicalUIWindow.cpp  GraphicalUIWindow.h
src/view/implTUI/: TextUIElement.cpp  TextUIElement.h
test/application/: mainTest.cpp
test/controller/: GameControllerTest.cpp  GameControllerTest.h  GameFactoryTest.cpp  GameFactoryTest.h  GameManagerTest.cpp  GameManagerTest.h  TCPMessageTest.cpp  TCPMessageTest.h
test/data/: CellTest.cpp  CellTest.h  FieldTest.cpp  FieldTest.h  GameTest.cpp  GameTest.h  PlayerTest.cpp  PlayerTest.h
